--- a/starry-react-app/package.json
+++ b/starry-react-app/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
+    "@studio-freight/lenis": "^1.0.42",
     "autoprefixer": "^10.4.21",
     "gsap": "^3.13.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.10",
     "three": "^0.177.0"
   },
